--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore:
-  firebase_core:
   flutter:
     sdk: flutter
+  cloud_firestore:
+  firebase_core:
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts:
 
 dev_dependencies:
   flutter_test:
