Поделал авторизацию. Немного улучшил корзину и навбар.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts:
   provider:
+  google_nav_bar:
+  firebase_auth: ^4.3.0
 
 dev_dependencies:
   flutter_test:
