--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   cloud_firestore:
   firebase_core:
+  qr_code_scanner:
 
 
   # The following adds the Cupertino Icons font to your application.
