--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ flutter:
   assets:
     - lib/images/
     - lib/icons/
+    - assets/images/
+    - assets/icons/
+    - assets/DB/papers/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
