--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore:
   firebase_core:
   qr_code_scanner:
+  firebase_storage:
 
 
   # The following adds the Cupertino Icons font to your application.
