--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_core:
   qr_code_scanner:
   firebase_storage:
+  cached_network_image:
 
 
   # The following adds the Cupertino Icons font to your application.
