--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   qr_code_scanner:
   firebase_storage:
   cached_network_image:
+  shared_preferences:
 
 
   # The following adds the Cupertino Icons font to your application.
