Страница мои заказы

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_storage:
   cached_network_image:
   shared_preferences:
+  intl:
 
 
   # The following adds the Cupertino Icons font to your application.
