Добавил библиотеку yandex_mapkit, разместил карту на пустую страницу, сделал модель для адресов, подготавливаю страницу добавления адреса

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cached_network_image:
   shared_preferences:
   intl:
+  yandex_mapkit: ^3.3.3
+  geocoding:
+  geolocator:
 
 
   # The following adds the Cupertino Icons font to your application.
