--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.2.0')
     implementation 'com.google.android.gms:play-services-base:18.2.0'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.yandex.android:maps.mobile:4.3.2-full'
 }
