фиксация версий библиотек

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,30 +30,30 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get:
-  cloud_firestore:
-  firebase_core:
-  qr_code_scanner:
-  firebase_storage:
-  cached_network_image:
-  shared_preferences:
-  intl:
+  get: ^4.6.5
+  cloud_firestore: ^4.11.0
+  firebase_core: ^2.19.0
+  qr_code_scanner: ^1.0.1
+  firebase_storage: ^11.3.1
+  cached_network_image: ^3.2.3
+  shared_preferences: ^2.2.2
+  intl: ^0.18.1
   yandex_mapkit: ^3.3.3
-  geocoding:
-  geolocator:
+  geocoding: ^2.1.1
+  geolocator: ^10.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts:
-  provider:
-  google_nav_bar:
+  google_fonts: ^4.0.4
+  provider: ^6.0.5
+  google_nav_bar: ^5.0.6
   firebase_auth: ^4.3.0
-  flutter_svg:
+  flutter_svg: ^2.0.7
   shimmer:
-  easy_separator:
-  carbon_icons:
+  easy_separator: ^1.0.1
+  carbon_icons: ^0.0.1+2
 
 dev_dependencies:
   flutter_test:
