--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   yandex_mapkit: ^3.3.3
   geocoding: ^2.1.1
   geolocator: ^10.0.1
-
+  sliding_up_panel: ^2.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
